# forger-hs

./: .fourmolu.yaml  .gitignore  .hlint.yaml  CHANGELOG.md  README.md  forger.cabal
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml
src/: Forger.hs
src/Forger/: Internal.hs  Mold.hs
test/: ForgerSpec.hs
test/Forger/: ForgerSpec.hs  InternalSpec.hs  MoldSpec.hs
test/Support/: Fixture.hs
