cabal-version: 3.0
name:          forger
version:       0.0.0.0
synopsis:      A library for generating test data
description:
  Forger provides a composable, seed-based approach to generating
  test data in Haskell. It is a port of forger-ts.

license:       MIT
license-file:  LICENSE
author:        lihs
maintainer:    lihs-ie
copyright:     2026 lihs
homepage:      https://github.com/lihs-ie/forger-hs
bug-reports:   https://github.com/lihs-ie/forger-hs/issues
category:      Testing
build-type:    Simple

extra-doc-files:
  README.md
  CHANGELOG.md

tested-with:
  GHC == 9.6.7
  GHC == 9.8.4
  GHC == 9.10.3

source-repository head
  type:     git
  location: https://github.com/lihs-ie/forger-hs.git

common warnings
  default-extensions:
    DerivingStrategies
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages

library
  import:           warnings
  exposed-modules:
    Forger
    Forger.Internal
  other-modules:
    Forger.Mold
  hs-source-dirs:   src
  default-language: GHC2021
  build-depends:
    base >= 4.18 && < 5
    , containers >= 0.6 && < 0.9
    , random >= 1.2 && < 1.4

test-suite forger-test
  import:           warnings
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  other-modules:
    Support.Fixture
    ForgerSpec
    Forger.InternalSpec
    Forger.MoldSpec
  hs-source-dirs:   test
  default-language: GHC2021
  build-depends:
      base          >= 4.18 && < 5
    , forger
    , hspec         >= 2.11 && < 2.12
    , hedgehog      >= 1.4  && < 1.6
    , hspec-hedgehog >= 0.1 && < 0.2
    , containers >= 0.6 && < 0.9
  build-tool-depends:
    hspec-discover:hspec-discover >= 2.11 && < 2.12
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
